<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/home"
            android:text="@string/home_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/mainHost"
            app:layout_constraintTop_toTopOf="@id/mainHost"
            tools:text="Личный кабинет">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mainBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintTop_toBottomOf="@id/home">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mainCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/oval"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/fast_option_bkg"
                    android:layout_margin="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                </ImageView>

                <ImageView
                    android:id="@+id/ruble"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:layout_constraintStart_toStartOf="@id/oval"
                    app:layout_constraintEnd_toEndOf="@id/oval"
                    app:layout_constraintTop_toTopOf="@id/oval"
                    app:layout_constraintBottom_toBottomOf="@id/oval"
                    android:src="@drawable/outline_currency_ruble_24">
                </ImageView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/balanceText"
                    android:text="@string/balance_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/oval"
                    app:layout_constraintTop_toTopOf="@id/oval"
                    android:layout_marginStart="8dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    tools:text="Ваш баланс">
                </com.google.android.material.textview.MaterialTextView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/idNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/oval"
                    app:layout_constraintLeft_toRightOf="@id/oval"
                    android:layout_marginStart="8dp"
                    android:textSize="16sp"
                    tools:text="ЛС:101010101010">
                </com.google.android.material.textview.MaterialTextView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/debtNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/oval"
                    app:layout_constraintTop_toBottomOf="@id/idNumber"
                    app:layout_constraintBottom_toBottomOf="@id/mainCard"
                    android:textSize="16sp"
                    android:layout_marginVertical="13dp"
                    tools:text="К оплате за сентябрь: 0.00Р">
                </com.google.android.material.textview.MaterialTextView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/balanceNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@id/mainCard"
                    app:layout_constraintTop_toTopOf="@id/mainCard"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="13dp"
                    tools:text="100.42 Р">
                </com.google.android.material.textview.MaterialTextView>

                <TextView
                    android:id="@+id/sendMoney"
                    android:text="@string/send_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@id/mainCard"
                    app:layout_constraintTop_toBottomOf="@id/idNumber"
                    app:layout_constraintBottom_toBottomOf="@id/mainCard"
                    android:textSize="16sp"
                    android:layout_marginEnd="13dp"
                    android:layout_marginVertical="13dp"
                    android:textColor="@color/red"
                    tools:text="ПОПОЛНИТЬ">
                </TextView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tariffText"
            android:text="@string/tariff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/mainHost"
            app:layout_constraintTop_toBottomOf="@id/mainBalance"
            tools:text="Тариф">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/tariffMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintTop_toBottomOf="@id/tariffText">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tariffCards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tariffText">

            </androidx.recyclerview.widget.RecyclerView>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user"
            android:text="@string/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/mainHost"
            app:layout_constraintTop_toBottomOf="@id/tariffMain"
            tools:text="Пользователь">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintTop_toBottomOf="@id/user">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/userInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user"
                tools:listitem="@layout/user_card">

            </androidx.recyclerview.widget.RecyclerView>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>